--- a/src/stylesheets/edit_form.scss
+++ b/src/stylesheets/edit_form.scss
@@ -49,7 +49,7 @@
     }
   }
 
-  > .btn {
+  > .btn:first-child {
     margin-left: 0;
   }
 
