--- a/src/stylesheets/editable_input.scss
+++ b/src/stylesheets/editable_input.scss
@@ -1,4 +1,8 @@
 .control-label {
+  display: block;
+  font-weight: 500;
+  margin-bottom: 4px;
+
   input[type="checkbox"] {
     margin-right: 5px;
   }
